@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: ctx.c,v 1.9 2004/01/16 02:18:37 dun Exp $
+ *  $Id: ctx.c,v 1.10 2004/01/30 23:16:33 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -30,11 +30,11 @@
 #endif /* HAVE_CONFIG_H */
 
 #include <assert.h>
+#include <sys/types.h>                  /* include before in.h for bsd */
 #include <netinet/in.h>
 #include <stdarg.h>
 #include <stdlib.h>
 #include <string.h>
-#include <sys/types.h>
 #include <munge.h>
 #include "ctx.h"
 #include "munge_defs.h"
